# ros2-exoskeleton-control-architecture

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  interfaces.md  roadmap.md  simulation_data_plan.md  ui.md  validation.md
docs/adr/: README.md
src/exo_adaptation/: CMakeLists.txt  package.xml
src/exo_adaptation/config/: exo_adaptation.yaml
src/exo_adaptation/launch/: exo_adaptation.launch.xml
src/exo_adaptation/src/: adaptation_node.cpp
src/exo_bringup/: CMakeLists.txt  package.xml
src/exo_bringup/config/: exo_bringup.yaml
src/exo_bringup/launch/: exo_bringup.launch.xml  exo_bringup_no_sim.launch.xml  exo_bringup_scenario_invalid_calibration.launch.xml  exo_bringup_scenario_missing_calibration.launch.xml  exo_bringup_scenario_valid_calibration.launch.xml
src/exo_bringup/src/: bringup_node.cpp
src/exo_calibration/: CMakeLists.txt  package.xml
src/exo_calibration/config/: exo_calibration.yaml
src/exo_calibration/launch/: exo_calibration.launch.xml
src/exo_calibration/src/: calibration_node.cpp
src/exo_fault_manager/: CMakeLists.txt  package.xml
src/exo_fault_manager/config/: exo_fault_manager.yaml
src/exo_fault_manager/launch/: exo_fault_manager.launch.xml
src/exo_fault_manager/src/: fault_manager_node.cpp
src/exo_gait_phase_detector/: CMakeLists.txt  package.xml
src/exo_gait_phase_detector/config/: exo_gait_phase_detector.yaml
src/exo_gait_phase_detector/launch/: exo_gait_phase_detector.launch.xml
src/exo_gait_phase_detector/src/: gait_phase_detector_node.cpp
src/exo_hardware_interface/: CMakeLists.txt  package.xml
src/exo_hardware_interface/launch/: exo_hardware_interface.launch.xml
src/exo_hardware_interface/src/: hardware_interface_node.cpp
src/exo_interfaces/: CMakeLists.txt  package.xml
src/exo_interfaces/msg/: AdaptiveParameters.msg  CalibrationStatus.msg  FaultEvent.msg  FusedLimbState.msg  GaitPhase.msg  RawSensorData.msg  TorqueCommand.msg  UserMessage.msg
src/exo_interfaces/srv/: SetOperatingMode.srv
src/exo_sensor_layer/: CMakeLists.txt  package.xml
src/exo_sensor_layer/launch/: exo_sensor_layer.launch.xml
src/exo_sensor_layer/src/: sensor_layer_node.cpp
src/exo_simulation/: CMakeLists.txt  package.xml
src/exo_simulation/config/: exo_simulation.yaml
src/exo_simulation/launch/: exo_simulation.launch.xml
src/exo_simulation/src/: simulation_node.cpp
src/exo_state_estimator/: CMakeLists.txt  package.xml
src/exo_state_estimator/config/: exo_state_estimator.yaml
src/exo_state_estimator/launch/: exo_state_estimator.launch.xml
src/exo_state_estimator/src/: state_estimator_node.cpp
src/exo_system_config/: CMakeLists.txt  package.xml
src/exo_system_config/config/: faults.yaml  qos.yaml  system.yaml  topics.yaml
src/exo_torque_controller/: CMakeLists.txt  package.xml
src/exo_torque_controller/config/: exo_torque_controller.yaml
src/exo_torque_controller/launch/: exo_torque_controller.launch.xml
src/exo_torque_controller/src/: torque_controller_node.cpp
src/exo_utils/: CMakeLists.txt  package.xml
src/exo_utils/launch/: exo_utils.launch.xml
src/exo_utils/src/: utils_node.cpp
src/exo_watchdog/: CMakeLists.txt  package.xml
src/exo_watchdog/config/: exo_watchdog.yaml
src/exo_watchdog/launch/: exo_watchdog.launch.xml
src/exo_watchdog/src/: watchdog_node.cpp
test/: README.md
ui/: README.md
ui/operator-dashboard/: .env.example  README.md  index.html  package-lock.json  package.json
ui/operator-dashboard/src/: App.tsx  styles.css  types.ts
ui/operator-dashboard/src/lib/: ros.ts
