<?xml version="1.0"?>
<package format="3">
  <name>exo_calibration</name>
  <version>0.1.0</version>
  <description>Calibration workflow node for status publication and calibration validation.</description>
  <maintainer email="jaime@example.com">Jaime</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>exo_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
