<?xml version="1.0"?>
<package format="3">
  <name>exo_system_config</name>
  <version>0.1.0</version>
  <description>Centralized configuration package for exoskeleton system parameters and policies.</description>
  <maintainer email="jaime@example.com">Jaime</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
